--- a/templates/head2.html
+++ b/templates/head2.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>头部</title>
+<title>头部-有点</title>
 <link rel="stylesheet" type="text/css" href="/static/css/public.css" />
 <script type="text/javascript" src="/static/js/jquery.min.js"></script>
 <script type="text/javascript" src="/static/js/public.js"></script>
@@ -11,11 +11,11 @@
 <body>
 	<!-- 头部 -->
 	<div class="head">
-		<div class="headl" >
+		<div class="headL">
 			<img class="headLogo" src="/static/img/logLOGO.png"/>
 		</div>
 		<div class="headR">
-			<span style="color:#FFF">欢迎：{{user}}</span> <a href="/user/logout/" rel="external">【退出】</a>
+			<span style="color:#FFF"><a href="login.html" target="_blank">【登录】</a></span>
 		</div>
 	</div>
 </body>
