--- a/templates/left.html
+++ b/templates/left.html
@@ -37,7 +37,7 @@
 					{% if permission.p_er == 'TJBJ' %}
 					<dd>
 						<img class="coin11" src="/static/img/coin111.png" /><img class="coin22"
-							src="/static/img/coin222.png" /><a class="cks" href="/user/addgrade/"
+							src="/static/img/coin222.png" /><a class="cks" href="/user/grade_edit/"
 							target="main">班级添加</a><img class="icon5" src="/static/img/coin21.png" />
 					</dd>
 					{% endif%}
@@ -65,7 +65,7 @@
 						{% if permission.p_er == 'TJXS' %}
 					<dd>
 						<img class="coin11" src="/static/img/coin111.png" /><img class="coin22"
-							src="/static/img/coin222.png" /><a class="cks" href="/user/addstu/"
+							src="/static/img/coin222.png" /><a class="cks" href="/user/student_edit/"
 							target="main">添加学生</a><img class="icon5" src="/static/img/coin21.png" />
 					</dd>
 					{% endif %}
@@ -82,7 +82,7 @@
 					</dt>
 					<dd>
 						<img class="coin11" src="/static/img/coin111.png" /><img class="coin22"
-							src="/static/img/coin222.png" /><a class="cks" href="/user/roles/"
+							src="/static/img/coin222.png" /><a class="cks" href="/user/role/"
 							target="main">角色列表</a><img class="icon5" src="/static/img/coin21.png" />
 					</dd>
 					{% endif %}
@@ -92,7 +92,7 @@
 					{% if permission.p_er == 'TJJS' %}
 					<dd>
 						<img class="coin11" src="/static/img/coin111.png" /><img class="coin22"
-							src="/static/img/coin222.png" /><a class="cks" href="/user/addroles/"
+							src="/static/img/coin222.png" /><a class="cks" href="/user/role_edit/"
 							target="main">添加角色</a><img class="icon5" src="/static/img/coin21.png" />
 					</dd>
 					{% endif %}
@@ -101,7 +101,7 @@
 					{% if permission.p_er == 'QXLB' %}
 					<dd>
 						<img class="coin11" src="/static/img/coin111.png" /><img class="coin22"
-							src="/static/img/coin222.png" /><a class="cks" href="/user/permissions/"
+							src="/static/img/coin222.png" /><a class="cks" href="/user/permission/"
 							target="main">权限列表</a><img class="icon5" src="/static/img/coin21.png" />
 					</dd>
 					{% endif %}
@@ -110,7 +110,7 @@
 					{% if permission.p_er == 'TJQX' %}
 					<dd>
 						<img class="coin11" src="/static/img/coin111.png" /><img class="coin22"
-							src="/static/img/coin222.png" /><a class="cks" href="/user/addpermission/"
+							src="/static/img/coin222.png" /><a class="cks" href="/user/permission_edit/"
 							target="main">添加权限</a><img class="icon5" src="/static/img/coin21.png" />
 					</dd>
 					{% endif %}
@@ -128,7 +128,7 @@
 
 					<dd>
 						<img class="coin11" src="/static/img/coin111.png" /><img class="coin22"
-							src="/static/img/coin222.png" /><a href="/user/userlist/"
+							src="/static/img/coin222.png" /><a href="/user/user_list/"
 							target="main" class="cks">用户列表</a><img class="icon5"
 							src="/static/img/coin21.png" />
 					</dd>
@@ -138,7 +138,7 @@
 					{% if permission.p_er == 'TJYH' %}
 					<dd>
 						<img class="coin11" src="/static/img/coin111.png" /><img class="coin22"
-							src="/static/img/coin222.png" /><a href="/user/adduser/"
+							src="/static/img/coin222.png" /><a href="/user/user_edit/"
 							target="main" class="cks">添加用户</a><img class="icon5"
 							src="/static/img/coin21.png" />
 					</dd>
@@ -154,7 +154,7 @@
 				</dt>
 				<dd>
 					<img class="coin11" src="/static/img/coin111.png" /><img class="coin22"
-						src="/static/img/coin222.png" /><a href="/user/changepwd/"
+						src="/static/img/coin222.png" /><a href="/user/pwd_change/"
 						target="main" class="cks">修改密码</a><img class="icon5"
 						src="/static/img/coin21.png" />
 				</dd>
