--- a/templates/role/role_list.html
+++ b/templates/role/role_list.html
@@ -37,9 +37,9 @@
                 <td>{{role.r_id}}</td>
                 <td>{{role.r_name}}</td>
                 <td>
-                    <a href="/user/userperlist/?r_id={{role.r_id}}">查看权限</a> |
-                    <a href="/user/adduserper/?r_id={{role.r_id}}">添加权限 </a> |
-                    <a href="/user/subuserper/?r_id={{role.r_id}}">减少权限</a>
+                    <a href="/user/user_per_list/?r_id={{role.r_id}}">查看权限</a> |
+                    <a href="/user/user_per_add/?r_id={{role.r_id}}">添加权限 </a> |
+                    <a href="/user/user_per_sub/?r_id={{role.r_id}}">减少权限</a>
                 </td>
             </tr>
             {% endfor %}
