--- a/templates/register.html
+++ b/templates/register.html
@@ -9,6 +9,7 @@
 <script type="text/javascript" src="/static/js/public.js"></script>
 </head>
 <body>
+<div style="margin-top: 10%">
 	<form action="" method="post">
 	<!-- 登录body -->
 	<div class="logDiv">
@@ -42,6 +43,7 @@
 		</div>
 	</div>
 	</form>
+</div>
 	<!-- 登录body  end -->
 
 	<!-- 登录页面底部 -->
