--- a/templates/left.html
+++ b/templates/left.html
@@ -66,7 +66,7 @@
 					<dd>
 						<img class="coin11" src="/static/img/coin111.png" /><img class="coin22"
 							src="/static/img/coin222.png" /><a class="cks" href="/user/student_edit/"
-							target="main">添加学生</a><img class="icon5" src="/static/img/coin21.png" />
+							target="main">学生添加</a><img class="icon5" src="/static/img/coin21.png" />
 					</dd>
 					{% endif %}
 				{% endfor %}
@@ -93,7 +93,7 @@
 					<dd>
 						<img class="coin11" src="/static/img/coin111.png" /><img class="coin22"
 							src="/static/img/coin222.png" /><a class="cks" href="/user/role_edit/"
-							target="main">添加角色</a><img class="icon5" src="/static/img/coin21.png" />
+							target="main">角色添加</a><img class="icon5" src="/static/img/coin21.png" />
 					</dd>
 					{% endif %}
 				{% endfor %}
@@ -111,7 +111,7 @@
 					<dd>
 						<img class="coin11" src="/static/img/coin111.png" /><img class="coin22"
 							src="/static/img/coin222.png" /><a class="cks" href="/user/permission_edit/"
-							target="main">添加权限</a><img class="icon5" src="/static/img/coin21.png" />
+							target="main">权限添加</a><img class="icon5" src="/static/img/coin21.png" />
 					</dd>
 					{% endif %}
 				{% endfor %}
@@ -139,7 +139,7 @@
 					<dd>
 						<img class="coin11" src="/static/img/coin111.png" /><img class="coin22"
 							src="/static/img/coin222.png" /><a href="/user/user_edit/"
-							target="main" class="cks">添加用户</a><img class="icon5"
+							target="main" class="cks">用户添加</a><img class="icon5"
 							src="/static/img/coin21.png" />
 					</dd>
 					{% endif %}
