--- a/templates/grade/grade_edit.html
+++ b/templates/grade/grade_edit.html
@@ -63,8 +63,8 @@
                         <th width="100">班级名称</th>
                         <td>
                             <div class="selectbox" style="width:380px;">
-                                <input type="hidden" value="{{g_id}}" name="g_id">
-                                <input type="text" name="g_name" placeholder="请填入班级名称" value="{{g_name}}">
+                                <input type="hidden" value="{{ grade.g_id }}" name="g_id">
+                                <input type="text" name="g_name" placeholder="请填入班级名称" value="{{ grade.g_name }}">
                                 <span style="color: red">{{msg}}</span>
                             </div>
                         </td>
