--- a/templates/user/user_list.html
+++ b/templates/user/user_list.html
@@ -40,6 +40,7 @@
                 <td>{{user.role.r_name}}</td>
                 <td>
                     <a href="/user/role_assign/?u_id={{user.u_id}}">分配角色</a> |
+                    <a href="/user/user_edit/?u_id={{user.u_id}}">编辑</a> |
                     <a href="">删除</a>
                 </td>
             </tr>
