--- a/templates/role/role_edit.html
+++ b/templates/role/role_edit.html
@@ -62,7 +62,7 @@
                         <th width="100">角色名称</th>
                         <td>
                             <div class="selectbox" style="width:230px;">
-                                <input type="text" name="r_name" placeholder="请填入角色名称">
+                                <input type="text" name="r_name" placeholder="请填入角色名称" value="{{ role.r_name }}">
                             </div>
                         </td>
                     </tr>
