--- a/templates/user_per_add.html
+++ b/templates/user_per_add.html
@@ -13,6 +13,10 @@
     <script src="/static/js/jquery-1.10.1.min.js"></script>
     <script src="/static/js/side.js" type="text/javascript"></script>
 
+    <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
+    <![endif]-->
 </head>
 
 <body>
@@ -51,59 +55,38 @@
                 })
             })
         </script>
-
-        <div class="form_boxC">
-            <p>"<span class="f_cB">*</span>"号为必填项目</p>
-
-            <form action="" method="post">
+        <form action="" method="post">
+            <div class="form_boxC">
                 <table cellpadding="0" cellspacing="0">
-                    <input name="s_id" type="text"  style="display: none" value="{{ student.s_id }}" />
                     <tr>
-                        <th>学生姓名 <span class="f_cB">*</span></th>
+                        <th width="100">权限名称</th>
                         <td>
-                            <div class="txtbox floatL" style="width:200px;">
-                                <input name="s_name" type="text" size="5" value="{{ student.s_name }}">
-                                <span style="color: red">{{msg}}</span>
-                            </div>
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <th>性别<span class="f_cB">*</span></th>
-                        <td><!-- selectbox -->
                             <div class="selectbox" style="width:230px;">
-                                <dl class="select">
-                                    <select name="s_sex">
-                                        <option value="1" {% if student and student.s_sex == 1%} selected {% endif %} >男</option>
-                                        <option value="0" {% if student and student.s_sex == 0%} selected {% endif %} >女</option>
-                                    </select>
-                                </dl>
-                            </div>
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <th>所属班级<span class="f_cB">*</span></th>
-                        <td><!-- selectbox -->
-                            <div class="selectbox" style="width:230px;">
-                                <dl class="select">
-                                    <select name="g_name" id="">
-                                        {% for grade in grades %}
-                                        <option value="{{grade.g_id}}" {% if student and student.grade_id == grade.g_id %} selected {% endif %} >{{ grade.g_name }}</option>
+                                <input type="hidden" name="r_id" value="{{r_id}}">
+                                    <select name="p_id" id="">
+                                        {% for permission in permissions %}
+                                        <option value="{{permission.p_id}}">{{permission.p_name}}</option>
                                         {% endfor %}
                                     </select>
-                                </dl>
+
+
                             </div>
                         </td>
                     </tr>
 
                 </table>
                 <div id="BtmBtn">
-                    <div class="btn_box floatR"><input name="" type="submit" value="提交"></div>
+                    <div class="btn_box floatR">
+                        <input name="" type="submit" value="提交">
+                    </div>
                 </div>
-            </form>
-        </div>
+            </div>
+        </form>
     </div>
+    <!-- SubPopup -->
+
+
 </div>
+<!-- /Popup -->
 </body>
 </html>
